--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.5"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend"
   }
 }
